--- a/WebSite/Areas/DomExplorer/Views/Shared/ChooseCssSelector.html
+++ b/WebSite/Areas/DomExplorer/Views/Shared/ChooseCssSelector.html
@@ -11,16 +11,17 @@
   <form class="cssSelector" action="Default" controller inherits="*">
     <div style="float: left;">
       <label>
-        <view key="SelectorExpression" attr="value"></view>
-        <input name="selector" size="28" id="selectorInput" onblur="showTips()" onfocus="this.style.backgroundImage='';" /></label>
+        <binding key="SelectorExpression" attr="value"></binding>
+        <input name="selector" size="28" id="selectorInput" onblur="showTips()" onfocus="this.style.backgroundImage='';" />
+      </label>
       <input type="submit" value="显示选择器结果" />
     </div>
 
-    <div class="message" style="float: right;">
+    <div class="message" style="float: right;" binding-visible="{binding key=SelectedElements}">
       共找到
-    <view key="SelectedElements" />
+      <binding key="SelectedElements" />
       个符合选择器
-    <view key="SelectorExpression" />
+      <binding key="SelectorExpression" />
       的元素
     </div>
     <div style="clear: both;"></div>
