--- a/WebSite/Areas/DomExplorer/Views/Shared/Layout.html
+++ b/WebSite/Areas/DomExplorer/Views/Shared/Layout.html
@@ -18,7 +18,7 @@
         <partial view="Share"></partial>
       </div>
       <div style="float: left; padding: 2px 20px;">
-        <<- 您的支持，我的动力。
+        ← 您的支持，我的动力。
    
       </div>
 
