--- a/WebSite/Areas/DomExplorer/Views/Shared/PageViewer.html
+++ b/WebSite/Areas/DomExplorer/Views/Shared/PageViewer.html
@@ -10,7 +10,7 @@
     <partial view="DomViewer"></partial>
     <div class="message">
       分析文档耗时：
-    <view key="Timespan"></view>
+    <binding key="Timespan"></binding>
     </div>
   </div>
 
