--- a/WebSite/Areas/Help/Views/Help/frame.html
+++ b/WebSite/Areas/Help/Views/Help/frame.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title></title>
   <link href="main.css" type="text/css" rel="stylesheet" />
-  <script src="../../../../Scripts/jquery-1.9.1.js"></script>
+  <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.0.min.js"></script>
 </head>
 <body>
   <script>
