--- a/WebSite/Areas/DomViewer/Views/Shared/ChooseDocument.html
+++ b/WebSite/Areas/DomViewer/Views/Shared/ChooseDocument.html
@@ -48,9 +48,9 @@
 
     <script>
 
-      var type = null;     //{binding key=Type}
-      var url = null;      //{binding key=Url}
-      var encoding = null; //{binding key=Encoding}
+      var type = null;     //{eval key=Type}
+      var url = null;      //{eval key=Url}
+      var encoding = null; //{eval key=Encoding}
 
       if (type != null)
       {
