--- a/WebSite/Areas/DomViewer/Views/Shared/Error.html
+++ b/WebSite/Areas/DomViewer/Views/Shared/Error.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h2 style="padding: 20px;">加载页面时出现错误：</h2>
-  <pre class="Exception" style="word-wrap: break-word;"><binding></binding></pre>
+  <pre class="Exception" style="word-wrap: break-word;"><eval></eval></pre>
 
 </body>
 </html>
