--- a/WebSite/Areas/DomViewer/Views/Shared/PageViewer.html
+++ b/WebSite/Areas/DomViewer/Views/Shared/PageViewer.html
@@ -10,7 +10,7 @@
     <partial view="DomViewer"></partial>
     <div class="message">
       分析文档耗时：
-    <binding key="Timespan"></binding>
+      <eval key="Timespan"></eval>
     </div>
   </div>
 
