--- a/WebSite/Areas/DomViewer/Views/Shared/ChooseCssSelector.html
+++ b/WebSite/Areas/DomViewer/Views/Shared/ChooseCssSelector.html
@@ -11,7 +11,7 @@
   <div class="choose-selector">
     <form action="Default" controller inherits="*">
       <section id="selector-input">
-        <input type="text" name="selector" class="text" value="{eval key=SelectorExpression}" />
+        <input type="text" name="selector" class="text" value="{eval path=[SelectorExpression]}" />
         <span class="selected-elements"><em class="index">1</em>of<em class="count"><eval key="SelectedElements"></eval></em></span>
       </section>
       <section>
